
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "patient-triage-assistant"
version = "0.1.0"
description = "Structure intake notes into triage-ready summaries, escalation flags, and care handoff context."
readme = "README.md"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
